fix: correct opencode CLI syntax to use 'run' subcommand
- Change opencode --yes --print --prompt to opencode run
- Move --agent flag after the prompt as per CLI spec
- Add bd sync with fallback for beads database updates
- Fixes workflow failing with help text instead of executing

--- a/.github/workflows/opencode-merge.yml
+++ b/.github/workflows/opencode-merge.yml
@@ -222,7 +222,7 @@ jobs:
                 # Get list of conflicted files
                 CONFLICTED=$(git diff --name-only --diff-filter=U)
                 
-                opencode --yes --print --prompt "
+                opencode run "
                 Resolve merge conflicts in the following files:
                 
                 $CONFLICTED
