fix: initialize beads database from JSONL in CI
The .db files are gitignored by design in beads - JSONL is the source of truth.
After fetching .beads/ from beads-db branch, run 'bd init --force' to create
the SQLite database from the JSONL files.

--- a/.github/workflows/opencode.yml
+++ b/.github/workflows/opencode.yml
@@ -88,7 +88,8 @@ jobs:
       - name: Fetch Beads database
         run: |
           git fetch origin beads-db:beads-db || true
-          git checkout beads-db -- .beads/ 2>/dev/null || bd init
+          git checkout beads-db -- .beads/ 2>/dev/null || true
+          bd init --force || bd init
 
       - name: Create feature branch
         id: branch
