--- a/.github/workflows/opencode-workers.yml
+++ b/.github/workflows/opencode-workers.yml
@@ -43,7 +43,8 @@ jobs:
       - name: Fetch Beads database
         run: |
           git fetch origin beads-db:beads-db || true
-          git checkout beads-db -- .beads/ 2>/dev/null || bd init
+          git checkout beads-db -- .beads/ 2>/dev/null || true
+          bd init --force || bd init
 
       - name: Create task sub-branch
         id: branch
