fix: make beads work and use big-pickle

--- a/.github/workflows/opencode-merge.yml
+++ b/.github/workflows/opencode-merge.yml
@@ -31,6 +31,11 @@ jobs:
           token: ${{ steps.app-token.outputs.token }}
           fetch-depth: 0
 
+      - name: Setup git
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+
       - name: Merge all task sub-branches
         id: merge-branches
         env:
@@ -172,6 +177,11 @@ jobs:
           curl -fsSL https://bun.sh/install | bash
           echo "$HOME/.bun/bin" >> $GITHUB_PATH
 
+      - name: Setup git
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+
       - name: Post conflict notification
         uses: actions/github-script@v8
         with:
@@ -193,6 +203,9 @@ jobs:
         run: |
           curl -fsSL https://opencode.ai/install | bash
           export PATH="$HOME/.opencode/bin:$HOME/.local/bin:$PATH"
+
+          mkdir -p ~/.config/opencode
+          echo '{"plugin":["oh-my-opencode"]}' > ~/.config/opencode/opencode.json
 
           TASK_IDS_ARRAY=$(echo "$TASK_IDS" | jq -r '.[]')
 
