--- a/.github/workflows/opencode.yml
+++ b/.github/workflows/opencode.yml
@@ -112,6 +112,8 @@ jobs:
           curl -fsSL https://opencode.ai/install | bash
           export PATH="$HOME/.opencode/bin:$HOME/.local/bin:$PATH"
 
+          mkdir -p ~/.config/opencode
+          echo '{"plugin":["oh-my-opencode"]}' > ~/.config/opencode/opencode.json
 
           ISSUE_NUMBER="${{ github.event.issue.number }}"
           ISSUE_TITLE="${{ github.event.issue.title }}"
@@ -325,6 +327,9 @@ jobs:
           curl -fsSL https://opencode.ai/install | bash
           export PATH="$HOME/.opencode/bin:$HOME/.local/bin:$PATH"
 
+          mkdir -p ~/.config/opencode
+          echo '{"plugin":["oh-my-opencode"]}' > ~/.config/opencode/opencode.json
+
           ISSUE_NUMBER="${{ github.event.issue.number }}"
           ISSUE_TITLE="${{ github.event.issue.title }}"
           ISSUE_BODY=$(cat << 'ISSUE_BODY_EOF'
@@ -352,6 +357,8 @@ jobs:
       - name: Commit and push
         id: commit
         run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
           git add -A
           if git diff --staged --quiet; then
             echo "has_changes=false" >> $GITHUB_OUTPUT
