--- a/.github/workflows/opencode.yml
+++ b/.github/workflows/opencode.yml
@@ -8,7 +8,7 @@ permissions:
   contents: write
   issues: write
   pull-requests: write
-  models: read
+  id-token: write
 
 jobs:
   parse-command:
@@ -73,7 +73,7 @@ jobs:
           private-key: ${{ secrets.APP_PRIVATE_KEY }}
 
       - name: Checkout
-        uses: actions/checkout@v6
+        uses: actions/checkout@v4
         with:
           token: ${{ steps.app-token.outputs.token }}
           fetch-depth: 0
@@ -108,53 +108,37 @@ jobs:
 
       - name: Run Planner-Sisyphus
         id: run-plan
+        uses: sst/opencode/github@dev
+        with:
+          model: opencode/big-pickle
+          agent: Planner-Sisyphus
+          prompt: |
+            Analyze this GitHub Issue and break it into atomic, parallelizable tasks.
+
+            ## Instructions
+            1. Create a beads epic for this issue:
+               bd create "Issue #${{ github.event.issue.number }}: ${{ github.event.issue.title }}" -p 1
+
+            2. Create child tasks under the epic using bd create with appropriate priorities (1-4)
+
+            3. Add dependencies between tasks using 'bd dep add <task-id> <depends-on-id>'
+               - Tasks that can run in parallel should have NO dependencies between them
+               - Tasks that must wait for others should declare dependencies
+
+            4. After creating all tasks, output the task list
+
+            Example dependency structure:
+            - bd-abc.1 'Setup types' (no deps - can start immediately)
+            - bd-abc.2 'Create component' (no deps - can start immediately)  
+            - bd-abc.3 'Add styling' depends on bd-abc.2
+            - bd-abc.4 'Write tests' depends on bd-abc.1, bd-abc.2
+            - bd-abc.5 'Integration' depends on bd-abc.3, bd-abc.4
+
+            Run 'bd list --json' when done.
+
+      - name: Get tasks from beads
+        id: get-tasks
         run: |
-          curl -fsSL https://opencode.ai/install | bash
-          export PATH="$HOME/.opencode/bin:$HOME/.local/bin:$PATH"
-
-          mkdir -p ~/.config/opencode
-          echo '{"plugin":["oh-my-opencode"]}' > ~/.config/opencode/opencode.json
-
-          ISSUE_NUMBER="${{ github.event.issue.number }}"
-          ISSUE_TITLE="${{ github.event.issue.title }}"
-          ISSUE_BODY=$(cat << 'ISSUE_BODY_EOF'
-          ${{ github.event.issue.body }}
-          ISSUE_BODY_EOF
-          )
-
-          opencode run "
-          Analyze GitHub Issue #${ISSUE_NUMBER} and break it into atomic, parallelizable tasks.
-
-          ## Issue Title
-          ${ISSUE_TITLE}
-
-          ## Issue Body
-          ${ISSUE_BODY}
-
-          ## Instructions
-          1. Create a beads epic for this issue:
-             bd create \"Issue #${ISSUE_NUMBER}: ${ISSUE_TITLE}\" -p 1
-
-          2. Create child tasks under the epic using bd create with appropriate priorities (1-4)
-
-          3. Add dependencies between tasks using 'bd dep add <task-id> <depends-on-id>'
-             - Tasks that can run in parallel should have NO dependencies between them
-             - Tasks that must wait for others should declare dependencies
-
-          4. After creating all tasks, output the task list
-
-          Example dependency structure:
-          - bd-abc.1 'Setup types' (no deps - can start immediately)
-          - bd-abc.2 'Create component' (no deps - can start immediately)  
-          - bd-abc.3 'Add styling' depends on bd-abc.2
-          - bd-abc.4 'Write tests' depends on bd-abc.1, bd-abc.2
-          - bd-abc.5 'Integration' depends on bd-abc.3, bd-abc.4
-
-          Run 'bd list --json' when done.
-          " --agent Planner-Sisyphus | tee plan_output.txt 2>&1 || true
-
-          cat plan_output.txt
-
           TASKS=$(bd list --json 2>/dev/null || echo '[]')
           echo "tasks<<EOF" >> $GITHUB_OUTPUT
           echo "$TASKS" >> $GITHUB_OUTPUT
@@ -203,7 +187,7 @@ jobs:
             core.setOutput('batches', JSON.stringify(batches));
             core.setOutput('batch_count', batches.length);
         env:
-          TASKS: ${{ steps.run-plan.outputs.tasks }}
+          TASKS: ${{ steps.get-tasks.outputs.tasks }}
 
       - name: Post plan summary
         uses: actions/github-script@v8
@@ -293,7 +277,7 @@ jobs:
           private-key: ${{ secrets.APP_PRIVATE_KEY }}
 
       - name: Checkout
-        uses: actions/checkout@v6
+        uses: actions/checkout@v4
         with:
           token: ${{ steps.app-token.outputs.token }}
           fetch-depth: 0
@@ -323,36 +307,18 @@ jobs:
             });
 
       - name: Run Sisyphus
-        run: |
-          curl -fsSL https://opencode.ai/install | bash
-          export PATH="$HOME/.opencode/bin:$HOME/.local/bin:$PATH"
+        uses: sst/opencode/github@dev
+        with:
+          model: opencode/big-pickle
+          prompt: |
+            Implement the changes requested in this GitHub Issue.
 
-          mkdir -p ~/.config/opencode
-          echo '{"plugin":["oh-my-opencode"]}' > ~/.config/opencode/opencode.json
+            ## Instructions
+            1. Implement the requested changes
+            2. Follow existing code patterns
+            3. Run 'bun run build' to verify no errors
 
-          ISSUE_NUMBER="${{ github.event.issue.number }}"
-          ISSUE_TITLE="${{ github.event.issue.title }}"
-          ISSUE_BODY=$(cat << 'ISSUE_BODY_EOF'
-          ${{ github.event.issue.body }}
-          ISSUE_BODY_EOF
-          )
-
-          opencode run "
-          Implement the changes requested in GitHub Issue #${ISSUE_NUMBER}.
-
-          ## Issue Title
-          ${ISSUE_TITLE}
-
-          ## Issue Body
-          ${ISSUE_BODY}
-
-          ## Instructions
-          1. Implement the requested changes
-          2. Follow existing code patterns
-          3. Run 'bun run build' to verify no errors
-
-          When complete, summarize what was implemented.
-          " || true
+            When complete, summarize what was implemented.
 
       - name: Commit and push
         id: commit
